Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23851

Attempt to unload currently building Qbs project crashes QtCreator

    XMLWordPrintable

Details

    • macOS
    • 6c32656a21ede948be7adf01fe94b4bfb77c45a4 (qt-creator/qt-creator/4.12)

    Description

      Start building an application. While building, right click on the project, "close project". Confirm that you want to stop build and unload. QtC will crash

      Stacktrace: https://pastebin.com/PbYBMdh0

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-23851
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            arch Ivan Komissarov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes